[package]
name = "psp-sys"
version = "0.3.12"
description = "Bindings to the Playstation Portable's firmware."
readme = "../README.md"
#repository = "https://github.com/overdrivenpotato/rust-psp"
license = "MIT"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>",
    "4yman-0",
]
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = [ "panic" ]
# Can't be entirely removed because the entrypoint relies on it.
panic = []
#std = []
# Compile this library as a stub provider. Useful to compile this as a static
# library for other projects.
#stub-only = []
#embedded-graphics = [ "dep:embedded-graphics-core" ]

[dependencies]
paste = "1.0.15"
bitflags = "2.6.0"
libm = "0.2.8"
#embedded-graphics-core = { version = "0.4.0", optional = true }
unstringify = "0.1.4"
