[package]
name = "psp-sys"
version = "0.3.12"
description = "Bindings to the Playstation Portable's firmware."
readme = "../README.md"
#repository = "https://github.com/overdrivenpotato/rust-psp"
license = "MIT"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>",
    "4yman-0",
]
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
paste = "1.0.15"
bitflags = "2.6.0"
psp-vfpu = { version = "0.1.0", path = "../psp-vfpu" }
