[package]
name = "mtl-to-psps"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.11.0", default-features = false }
bytemuck = { version = "1.25.0", default-features = false }
clap = { version = "4.6.0", default-features = false, features = ["color", "derive", "help", "std", "usage"] }
