[package]
name = "gl"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
glam = { version = "0.32.0", default-features = false, features = ["nostd-libm"] }
psp-sys = { version = "0.3.12", path = "../../psp-sys" }
psp-apis = { version = "0.1.0", path = "../../psp-apis" }
libm = { version = "0.2.16", path = "../../libm", features = ["arch"] }
aligned_box = { version = "0.3.0", default-features = false }
